cmake_minimum_required(VERSION 3.17)
project(breadth_first_search)
set(CMAKE_CXX_STANDARD)
add_executable (breadth_first_search main.cpp)

add_compile_options(-std=c++2a)
if (MSVC)
    set(CMAKE_CXX_FLAGS  std:c++latest)
    add_compile_options(/W4 /EHsc)
else()
    set(CMAKE_CXX_FLAGS  -std=c++2a)
    target_link_libraries(breadth_first_search PRIVATE pthread)
    add_compile_options(_Wall -O3 -pedantic -Wextra -Werror)
endif()
